--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,25 +30,28 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-database:6.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.firebase:firebase-storage:19.1.0'
-    implementation 'com.google.android.material:material:1.2.0-alpha01'
+    implementation 'com.google.android.material:material:1.2.0-alpha02'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.3'
     implementation 'io.paperdb:paperdb:2.6'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.navigation:navigation-fragment:2.0.0'
-    implementation 'androidx.navigation:navigation-ui:2.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.navigation:navigation-fragment:2.1.0'
+    implementation 'androidx.navigation:navigation-ui:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'de.hdodenhof:circleimageview:3.0.1'
     implementation('com.paytm:pgplussdk:1.4.4')
     implementation 'com.android.support:appcompat-v7:25.1.0'
     implementation 'com.android.support:support-v4:25.1.0'
     implementation 'com.android.support:design:25.1.0'
-    implementation 'com.google.android.gms:play-services-auth:9.8.0'
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.google.android.gms:play-services-gcm:17.0.0'
     implementation 'com.android.support:cardview-v7:25.1.0'
     implementation 'com.android.support:customtabs:25.1.0'
     implementation 'com.patrickpissurno:ripple-effect:1.3.1'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.android.support:support-v4:22.0.0'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
     implementation project(':monetbil')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
